fixed edit button displayed, fixed expenses  add button aligned

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -203,6 +203,10 @@ input[type="number"] {
   }
 }
 
+.isInactive {
+  display: none;
+}
+
 .line {
   width: 100%;
   height: 2px;
